# Modxo

./: .editorconfig  .gitignore  .gitmodules  BRANDING ES-MX.md  BRANDING PT-BR.md  BRANDING.md  CMakeLists.txt  Dockerfile  LICENSE  PicoModWIP.code-workspace  README ES-MX.md  README NL.md  README PT-BR.md  README.md  docker-compose.yml  index.html  modxo.code-workspace  pico_sdk_import.cmake
.github/workflows/: BundleModxo.yml  cleanup.yml
boards/: bsx.cmake  modxo_pinout.cmake  modxo_pinout.h.in  official_pico.cmake  official_pico2.cmake  pico_clone.cmake  r3mux.cmake  r3mux_clone.cmake  rp2040_zero.cmake  rp2040_zero_tiny.cmake  rp2040_zero_tiny_clone.cmake  test_board.cmake  ultra.cmake  weact_rp2350b.cmake  xiao_rp2040.cmake  yd_rp2040.cmake  yd_rp2040_clone.cmake  yd_rp2350.cmake
boards/custom_pico_boards/: rp2040_zero_clone.h  ultra.h
js/: modxo_bios_packer.js
modxo/: CMakeLists.txt  modxo.c  modxo_queue.c
modxo/config/: CMakeLists.txt  config_nvm.c
modxo/data_store/: CMakeLists.txt  data_store.c
modxo/expansion_i2c/: CMakeLists.txt  expansion_i2c.c
modxo/expansion_i2c/include/: expansion_i2c.h
modxo/include/: modxo.h
modxo/include/modxo/: config_nvm.h  data_store.h  lpc_interface.h  lpc_log.h  lpc_regs.h  modxo_debug.h  modxo_ports.h  modxo_queue.h  msc_interface.h
modxo/lpc/: CMakeLists.txt  lpc_comm.in  lpc_interface.c  lpc_io.c  lpc_log.c  lpc_mem.c  lpc_sio.c  lpc_sio_sm.c
modxo/sd_card/: CMakeLists.txt  fatfs_sd.cmake  fatfs_spi.cmake  hw_config.c  sdio_link_stubs.c
modxo/sdcard/examples/simple_sdio/: CMakeLists.txt  main.c
modxo/sdcard/src/ff15/source/: ff.c  ff.h
modxo/sdcard/src/include/: ffconf.h
modxo/sdcard/src/sd_driver/: sd_card.c  sd_card.h
modxo/sdcard/src/sd_driver/SDIO/: rp2040_sdio.c
modxo/sdcard/src/sd_driver/SPI/: sd_card_spi.c  sd_card_spi.h
modxo/usb/: CMakeLists.txt  msc_interface.c  usb_descriptors.c
modxo/usb/MSC_3CDC/: msc_interface.c  usb_descriptors.c
modxo_modules/expansion/: CMakeLists.txt  expansion.c
modxo_modules/expansion/include/: expansion.h
modxo_modules/flashrom/: CMakeLists.txt  flashrom.c
modxo_modules/flashrom/include/: flashrom.h
modxo_modules/flashrom_mapper/: CMakeLists.txt  flashrom.c  mapper.c
modxo_modules/flashrom_mapper/include/: flashrom.h
modxo_modules/legacy_display/: CMakeLists.txt  legacy_display.c
modxo_modules/legacy_display/include/: legacy_display.h
modxo_modules/lpc_mapper/: CMakeLists.txt  lpc_mapper.c
modxo_modules/lpc_mapper/handlers/: echo.c  expansion.c  flash.c  heap.c  int_ram.c  psram.c  rng.c  sdcard.c  sdconfig.c
modxo_modules/lpc_mapper/include/: lpc_mapper.h
modxo_modules/lpc_mem_window/: CMakeLists.txt  lpc_mem_window.c
modxo_modules/lpc_mem_window/handlers/: README.md  echo.c  expansion.c  heap.c  hw_config.c  int_ram.c  psram.c  rng.c  sdcard.c  sdconfig.c
modxo_modules/lpc_mem_window/include/: lpc_mem_window.h
modxo_modules/mailbox_mapper/: CMakeLists.txt  flashrom_mailbox.c  lpc_mem.c  mapper.c
modxo_modules/sdcard/: CMakeLists.txt  README.md  sdcard.c
modxo_modules/sdcard/include/: sdcard.h
modxo_modules/serirq/: CMakeLists.txt  serirq.c  serirq.pio  serirq.pio.in
modxo_modules/serirq/include/: serirq.h
modxo_modules/superio/: CMakeLists.txt  LPC47M152.c  uart_16550.c
modxo_modules/superio/include/: LPC47M152.h  uart_16550.h
modxo_modules/ws2812/: CMakeLists.txt  ws2812.c
modxo_modules/ws2812/include/: ws2812.h
schematic/: SCH_ModxoPrototype.json
schematics/: EasyEDS-SCH_Modxo.json
src/: hw_config.c  main.c
src/data_store/: CMakeLists.txt
src/flashrom/: CMakeLists.txt  flashrom.c
src/flashrom/include/: flashrom.h
src/legacy_display/: CMakeLists.txt  legacy_display.c
src/modxo/: CMakeLists.txt  modxo.c  modxo.h  modxo_debug.h  modxo_ports.c  modxo_ports.h  modxo_queue.c
src/modxo/config/: CMakeLists.txt  config_lpc.c  config_lpc.h  config_nvm.c  config_nvm.h
src/modxo/data_store/: data_store.c  data_store.h
src/modxo/display_interface/: display_driver.h  display_interface.c  display_interface.h  i2c_interface.c  spi_interface.c
src/modxo/flashrom/: flashrom.c  flashrom.h
src/modxo/include/: modxo.h
src/modxo/include/modxo/: modxo_ports.h
src/modxo/legacy_display/: legacy_display.c  legacy_display.h
src/modxo/lpc/: CMakeLists.txt  lpc_comm.in  lpc_interface.c  lpc_interface.h  lpc_log.c  lpc_log.h  lpc_regs.c
src/modxo/superio/: DATA_STORE.c  DATA_STORE.h  LPC47M152.c  LPC47M152.h  SPI_PORT.c  SPI_PORT.h  WS2812.c  WS2812.h  uart_16550.c  uart_16550.h
src/modxo/text_display/: hd44780.c  hd44780.h  modxo_td_driver.h
src/modxo/usb/: msc_interface.c  msc_interface.h  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.h
src/modxo/ws2812/: ws2812.c  ws2812.h
src/superio/: CMakeLists.txt  LPC47M152.c  uart_16550.c
src/ws2812/: CMakeLists.txt
tools/: dockerbuild.sh
